Feature ETP-3746: Fixed sonnar duplication code