@@ -60,7 +60,6 @@ import org.openbravo.model.ad.domain.ModelImplementation;
 import org.openbravo.model.ad.domain.ModelImplementationMapping;
 import org.openbravo.model.ad.system.Language;
 import org.openbravo.model.ad.ui.Menu;
-import org.openbravo.model.ad.ui.Window;
 
 /**
  * Test class for MenuBuilder.
@@ -80,6 +79,12 @@ class MenuBuilderTest {
   @Mock
   private Language language;
 
+  @Mock
+  private Session session;
+
+  @Mock
+  private OBDal obDal;
+
   private static final String PROCESS_URL = "processUrl";
   private static final String PROCESS_ID = "processId";
   private static final String IS_REPORT = "isReport";
@@ -96,11 +101,69 @@ class MenuBuilderTest {
   private static final String VIEW_DESC = "View Desc";
   private static final String VIEW_ID = "viewId";
 
+  @FunctionalInterface
+  private interface MenuBuilderConsumer {
+    void accept(MenuBuilder builder) throws JSONException;
+  }
+
   @AfterEach
   void tearDown() throws NoSuchFieldException, IllegalAccessException {
     Field managerField = MenuBuilder.class.getDeclaredField("manager");
     managerField.setAccessible(true);
     ((ThreadLocal<?>) managerField.get(null)).remove();
+  }
+
+  private void withMenuBuilder(MenuBuilderConsumer action) throws JSONException {
+    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
+        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
+            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
+      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
+      when(obContext.getLanguage()).thenReturn(language);
+      action.accept(new MenuBuilder());
+    }
+  }
+
+  private void withMenuBuilderAndUtility(MenuBuilderConsumer action) throws JSONException {
+    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
+        MockedStatic<Utility> ignoredUtility = mockStatic(Utility.class);
+        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
+            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
+      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
+      when(obContext.getLanguage()).thenReturn(language);
+      action.accept(new MenuBuilder());
+    }
+  }
+
+  private void withMenuBuilderAndDal(MenuBuilderConsumer action) throws JSONException {
+    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
+        MockedStatic<OBDal> dalStatic = mockStatic(OBDal.class);
+        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
+            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
+      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
+      when(obContext.getLanguage()).thenReturn(language);
+      dalStatic.when(OBDal::getInstance).thenReturn(obDal);
+      action.accept(new MenuBuilder());
+    }
+  }
+
+  private void setupViewMenuOption(MenuOption childOption, Menu childMenu, String menuId) {
+    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
+    when(childOption.getMenu()).thenReturn(childMenu);
+    when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.View);
+    when(childMenu.getId()).thenReturn(menuId);
+    when(childMenu.get(Menu.PROPERTY_ETMETAICON, language, menuId)).thenReturn(VIEW_ICON);
+    when(childMenu.get(Menu.PROPERTY_NAME, language, menuId)).thenReturn(VIEW_MENU);
+    when(childMenu.get(Menu.PROPERTY_DESCRIPTION, language, menuId)).thenReturn(VIEW_DESC);
+    when(childOption.getChildren()).thenReturn(new ArrayList<>());
+  }
+
+  @SuppressWarnings({ "unchecked", "rawtypes" })
+  private void setupQueryMock(List<Object[]> results) {
+    NativeQuery mockQuery = mock(NativeQuery.class);
+    when(session.createNativeQuery(anyString())).thenReturn(mockQuery);
+    when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
+    when(mockQuery.list()).thenReturn(results);
+    when(obDal.getSession()).thenReturn(session);
   }
 
   /**
@@ -109,16 +172,8 @@ class MenuBuilderTest {
    * when the necessary context and menu manager are available.
    */
   @Test
-  void testConstructorSuccessful() {
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      assertDoesNotThrow(MenuBuilder::new);
-    }
+  void testConstructorSuccessful() throws JSONException {
+    withMenuBuilder(builder -> assertNotNull(builder));
   }
 
   /**
@@ -161,17 +216,9 @@ class MenuBuilderTest {
     MenuOption freshChildOption = mock(MenuOption.class);
     Menu freshParentMenu = mock(Menu.class);
 
-    List<MenuOption> rootChildren = new ArrayList<>();
-    rootChildren.add(freshChildOption);
-
-    List<MenuOption> childChildren = new ArrayList<>();
-    childChildren.add(grandChild);
-
-    List<MenuOption> grandChildChildren = new ArrayList<>();
-
-    when(rootMenuOption.getChildren()).thenReturn(rootChildren);
-    when(freshChildOption.getChildren()).thenReturn(childChildren);
-    when(grandChild.getChildren()).thenReturn(grandChildChildren);
+    when(rootMenuOption.getChildren()).thenReturn(List.of(freshChildOption));
+    when(freshChildOption.getChildren()).thenReturn(List.of(grandChild));
+    when(grandChild.getChildren()).thenReturn(new ArrayList<>());
 
     when(freshChildOption.getMenu()).thenReturn(freshParentMenu);
     when(freshChildOption.getType()).thenReturn(MenuManager.MenuEntryType.Summary);
@@ -191,8 +238,7 @@ class MenuBuilderTest {
     when(grandChildMenu.getId()).thenReturn(GRANDCHILD_ID);
     when(grandChildMenu.get(Menu.PROPERTY_ETMETAICON, language, GRANDCHILD_ID)).thenReturn("child-icon");
     when(grandChildMenu.get(Menu.PROPERTY_NAME, language, GRANDCHILD_ID)).thenReturn("Grand Child");
-    when(grandChildMenu.get(Menu.PROPERTY_DESCRIPTION, language, GRANDCHILD_ID)).thenReturn(
-        "Grand Child Description");
+    when(grandChildMenu.get(Menu.PROPERTY_DESCRIPTION, language, GRANDCHILD_ID)).thenReturn("Grand Child Description");
     when(grandChildMenu.getURL()).thenReturn("http://example.com/grandchild");
     when(grandChildMenu.getAction()).thenReturn("grandchild-action");
     when(grandChildMenu.getWindow()).thenReturn(null);
@@ -200,16 +246,8 @@ class MenuBuilderTest {
     when(grandChildMenu.getOBUIAPPProcessDefinition()).thenReturn(null);
     when(grandChildMenu.getProcess()).thenReturn(null);
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilder(builder -> {
       JSONObject result = builder.toJSON();
-
       assertNotNull(result);
       JSONArray menuArray = result.getJSONArray("menu");
       assertEquals(1, menuArray.length());
@@ -225,7 +263,7 @@ class MenuBuilderTest {
       assertEquals(GRANDCHILD_ID, childMenu.getString("id"));
       assertEquals("Window", childMenu.getString("type"));
       assertFalse(childMenu.has(CHILDREN));
-    }
+    });
   }
 
   /**
@@ -235,31 +273,14 @@ class MenuBuilderTest {
    * without throwing any exceptions, even when the menu has no children.
    */
   @Test
-  void testToJSONHandlesExceptionGracefully() {
-    MenuOption freshChildOption = mock(MenuOption.class);
-    MenuOption freshRootOption = mock(MenuOption.class);
-
-    List<MenuOption> rootChildren = new ArrayList<>();
-    rootChildren.add(freshChildOption);
-
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(freshRootOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
-
-      assertDoesNotThrow(() -> {
-        try {
-          JSONObject result = builder.toJSON();
-          assertNotNull(result);
-        } catch (JSONException e) {
-          fail("JSONException should be handled internally");
-        }
-      });
-    }
+  void testToJSONHandlesExceptionGracefully() throws JSONException {
+    withMenuBuilder(builder -> assertDoesNotThrow(() -> {
+      try {
+        assertNotNull(builder.toJSON());
+      } catch (JSONException e) {
+        fail("JSONException should be handled internally");
+      }
+    }));
   }
 
   /**
@@ -276,9 +297,7 @@ class MenuBuilderTest {
     ModelImplementation mi = mock(ModelImplementation.class);
     ModelImplementationMapping mim = mock(ModelImplementationMapping.class);
 
-    List<MenuOption> rootChildren = List.of(childOption);
-    when(rootMenuOption.getChildren()).thenReturn(rootChildren);
-
+    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
     when(childOption.getMenu()).thenReturn(childMenu);
     when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.Process);
     when(childMenu.getId()).thenReturn("PROCESS_ID_VAL");
@@ -293,21 +312,12 @@ class MenuBuilderTest {
     when(mim.isDefault()).thenReturn(true);
     when(mim.getMappingName()).thenReturn(MAPPING_URL);
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<Utility> utilityStatic = mockStatic(Utility.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndUtility(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject processMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals(AD_PROCESS_ID, processMenu.getString(PROCESS_ID));
       assertEquals(MAPPING_URL, processMenu.getString(PROCESS_URL));
-    }
+    });
   }
 
   /**
@@ -324,9 +334,7 @@ class MenuBuilderTest {
     ModelImplementation mi = mock(ModelImplementation.class);
     ModelImplementationMapping mim = mock(ModelImplementationMapping.class);
 
-    List<MenuOption> rootChildren = List.of(childOption);
-    when(rootMenuOption.getChildren()).thenReturn(rootChildren);
-
+    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
     when(childOption.getMenu()).thenReturn(childMenu);
     when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.Report);
     when(childMenu.getId()).thenReturn("REPORT_ID_VAL");
@@ -340,21 +348,12 @@ class MenuBuilderTest {
     when(mim.isDefault()).thenReturn(true);
     when(mim.getMappingName()).thenReturn(REPORT_URL);
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<Utility> utilityStatic = mockStatic(Utility.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndUtility(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject reportMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals(REPORT_URL, reportMenu.getString(PROCESS_URL));
       assertTrue(reportMenu.getBoolean(IS_REPORT));
-    }
+    });
   }
 
   /**
@@ -369,9 +368,7 @@ class MenuBuilderTest {
     Menu childMenu = mock(Menu.class);
     org.openbravo.model.ad.ui.Process process = mock(org.openbravo.model.ad.ui.Process.class);
 
-    List<MenuOption> rootChildren = List.of(childOption);
-    when(rootMenuOption.getChildren()).thenReturn(rootChildren);
-
+    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
     when(childOption.getMenu()).thenReturn(childMenu);
     when(childMenu.getId()).thenReturn("PENTAHO_ID_VAL");
     when(childMenu.getProcess()).thenReturn(process);
@@ -383,20 +380,11 @@ class MenuBuilderTest {
     when(process.getServiceType()).thenReturn("PS");
     when(process.getADModelImplementationList()).thenReturn(new ArrayList<>());
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<Utility> utilityStatic = mockStatic(Utility.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndUtility(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject pentahoMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals(PENTAHO_URL + AD_PENTAHO_ID, pentahoMenu.getString(PROCESS_URL));
-    }
+    });
   }
 
   /**
@@ -405,47 +393,20 @@ class MenuBuilderTest {
    *
    * @throws JSONException if there is an error during JSON construction
    */
-  @SuppressWarnings("unchecked")
   @Test
   void testAddViewInfoWithFullyQualifiedClassname() throws JSONException {
     MenuOption childOption = mock(MenuOption.class);
     Menu childMenu = mock(Menu.class);
-    String menuId = "VIEW_MENU_ID";
-    Session session = mock(Session.class);
-    NativeQuery mockQuery = mock(NativeQuery.class);
-    OBDal obDal = mock(OBDal.class);
-
-    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
-    when(childOption.getMenu()).thenReturn(childMenu);
-    when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.View);
-    when(childMenu.getId()).thenReturn(menuId);
-    when(childMenu.get(Menu.PROPERTY_ETMETAICON, language, menuId)).thenReturn(VIEW_ICON);
-    when(childMenu.get(Menu.PROPERTY_NAME, language, menuId)).thenReturn(VIEW_MENU);
-    when(childMenu.get(Menu.PROPERTY_DESCRIPTION, language, menuId)).thenReturn(VIEW_DESC);
-    when(childOption.getChildren()).thenReturn(new ArrayList<>());
-
+    setupViewMenuOption(childOption, childMenu, "VIEW_MENU_ID");
     Object[] viewRow = { "com.example.MyViewClassName", "MyViewName" };
-    when(session.createNativeQuery(anyString())).thenReturn(mockQuery);
-    when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
-    when(mockQuery.list()).thenReturn(List.of(viewRow));
-    when(obDal.getSession()).thenReturn(session);
+    setupQueryMock(Collections.singletonList(viewRow));
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<OBDal> dalStatic = mockStatic(OBDal.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-      dalStatic.when(OBDal::getInstance).thenReturn(obDal);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndDal(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject viewMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals("View", viewMenu.getString("type"));
       assertEquals("MyViewClassName", viewMenu.getString(VIEW_ID));
-    }
+    });
   }
 
   /**
@@ -453,46 +414,19 @@ class MenuBuilderTest {
    *
    * @throws JSONException if there is an error during JSON construction
    */
-  @SuppressWarnings("unchecked")
   @Test
   void testAddViewInfoFallsBackToNameWhenClassnameIsNull() throws JSONException {
     MenuOption childOption = mock(MenuOption.class);
     Menu childMenu = mock(Menu.class);
-    String menuId = "VIEW_MENU_ID_2";
-    Session session = mock(Session.class);
-    NativeQuery mockQuery = mock(NativeQuery.class);
-    OBDal obDal = mock(OBDal.class);
-
-    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
-    when(childOption.getMenu()).thenReturn(childMenu);
-    when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.View);
-    when(childMenu.getId()).thenReturn(menuId);
-    when(childMenu.get(Menu.PROPERTY_ETMETAICON, language, menuId)).thenReturn(VIEW_ICON);
-    when(childMenu.get(Menu.PROPERTY_NAME, language, menuId)).thenReturn(VIEW_MENU);
-    when(childMenu.get(Menu.PROPERTY_DESCRIPTION, language, menuId)).thenReturn(VIEW_DESC);
-    when(childOption.getChildren()).thenReturn(new ArrayList<>());
-
+    setupViewMenuOption(childOption, childMenu, "VIEW_MENU_ID_2");
     Object[] viewRow = { null, "SimpleViewName" };
-    when(session.createNativeQuery(anyString())).thenReturn(mockQuery);
-    when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
-    when(mockQuery.list()).thenReturn(List.of(viewRow));
-    when(obDal.getSession()).thenReturn(session);
+    setupQueryMock(Collections.singletonList(viewRow));
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<OBDal> dalStatic = mockStatic(OBDal.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-      dalStatic.when(OBDal::getInstance).thenReturn(obDal);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndDal(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject viewMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals("SimpleViewName", viewMenu.getString(VIEW_ID));
-    }
+    });
   }
 
   /**
@@ -500,45 +434,18 @@ class MenuBuilderTest {
    *
    * @throws JSONException if there is an error during JSON construction
    */
-  @SuppressWarnings("unchecked")
   @Test
   void testAddViewInfoWithEmptyResultDoesNotSetViewId() throws JSONException {
     MenuOption childOption = mock(MenuOption.class);
     Menu childMenu = mock(Menu.class);
-    String menuId = "VIEW_MENU_ID_3";
-    Session session = mock(Session.class);
-    NativeQuery mockQuery = mock(NativeQuery.class);
-    OBDal obDal = mock(OBDal.class);
+    setupViewMenuOption(childOption, childMenu, "VIEW_MENU_ID_3");
+    setupQueryMock(Collections.emptyList());
 
-    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
-    when(childOption.getMenu()).thenReturn(childMenu);
-    when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.View);
-    when(childMenu.getId()).thenReturn(menuId);
-    when(childMenu.get(Menu.PROPERTY_ETMETAICON, language, menuId)).thenReturn(VIEW_ICON);
-    when(childMenu.get(Menu.PROPERTY_NAME, language, menuId)).thenReturn(VIEW_MENU);
-    when(childMenu.get(Menu.PROPERTY_DESCRIPTION, language, menuId)).thenReturn(VIEW_DESC);
-    when(childOption.getChildren()).thenReturn(new ArrayList<>());
-
-    when(session.createNativeQuery(anyString())).thenReturn(mockQuery);
-    when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
-    when(mockQuery.list()).thenReturn(Collections.emptyList());
-    when(obDal.getSession()).thenReturn(session);
-
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedStatic<OBDal> dalStatic = mockStatic(OBDal.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-      dalStatic.when(OBDal::getInstance).thenReturn(obDal);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilderAndDal(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject viewMenu = result.getJSONArray("menu").getJSONObject(0);
       assertFalse(viewMenu.has(VIEW_ID));
-    }
+    });
   }
 
   /**
@@ -557,9 +464,7 @@ class MenuBuilderTest {
     String menuUrl = "/basic/url";
     String menuAction = "X";
 
-    List<MenuOption> rootChildren = List.of(childOption);
-    when(rootMenuOption.getChildren()).thenReturn(rootChildren);
-
+    when(rootMenuOption.getChildren()).thenReturn(List.of(childOption));
     when(childOption.getMenu()).thenReturn(childMenu);
     when(childOption.getType()).thenReturn(MenuManager.MenuEntryType.External);
     when(childMenu.getId()).thenReturn(menuId);
@@ -569,16 +474,8 @@ class MenuBuilderTest {
     when(childMenu.getURL()).thenReturn(menuUrl);
     when(childMenu.getAction()).thenReturn(menuAction);
 
-    try (MockedStatic<OBContext> obContextStatic = mockStatic(OBContext.class);
-        MockedConstruction<MenuManager> ignored = mockConstruction(MenuManager.class,
-            (mock, context) -> when(mock.getMenu()).thenReturn(rootMenuOption))) {
-
-      obContextStatic.when(OBContext::getOBContext).thenReturn(obContext);
-      when(obContext.getLanguage()).thenReturn(language);
-
-      MenuBuilder builder = new MenuBuilder();
+    withMenuBuilder(builder -> {
       JSONObject result = builder.toJSON();
-
       JSONObject basicMenu = result.getJSONArray("menu").getJSONObject(0);
       assertEquals(menuId, basicMenu.getString("id"));
       assertEquals("External", basicMenu.getString("type"));
@@ -587,7 +484,7 @@ class MenuBuilderTest {
       assertEquals(menuDesc, basicMenu.getString("description"));
       assertEquals(menuUrl, basicMenu.getString("url"));
       assertEquals(menuAction, basicMenu.getString("action"));
-    }
+    });
   }
 
 }
